--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-<!--    <script type="module" src="color.js" defer></script>-->
-    <script type="module" src="app.js" defer></script>
+    <script type="module" src="color.js" defer></script>
+<!--    <script type="module" src="app.js" defer></script>-->
     <title>Country Information - World Regions</title>
 </head>
 <body>
 <main class="container">
-    <h1>world regions</h1>
+    <a href="index2.html"><h1>World regions</h1></a>
     <div class="image-container">
         <img src="./assets/world_map.png" alt="World map">
     </div>
